--- a/src/app/user/user.page.html
+++ b/src/app/user/user.page.html
@@ -34,3 +34,28 @@
     </ion-grid>
   </form>
 </ion-content>
+
+<ion-content color="primary" padding>
+  <div text-center><h1>Usuarios</h1></div>
+  
+  <ion-grid>
+
+    <ion-row color="primary" justify-content-center>
+      <ion-col>Nombre</ion-col>
+      <ion-col>Email</ion-col>
+      <ion-col>Acción</ion-col>
+    </ion-row>
+
+    <ion-row *ngFor="let item of users, let i = index" justify-content-center>
+
+      <ion-col>
+        {{item.nombre}}
+      </ion-col>
+      <ion-col>
+        {{item.email}}
+      </ion-col>
+      <ion-col><ion-icon name="create" (click)="updateTask(i)"></ion-icon> <ion-icon name="trash" (click)="delete(i)"></ion-icon></ion-col> 
+
+    </ion-row>
+  </ion-grid>
+</ion-content>
