--- a/src/app/user/user.page.scss
+++ b/src/app/user/user.page.scss
@@ -10,6 +10,14 @@ ion-button{
     --background: #062f77;
 }
 
+ion-col{
+    text-align: center;
+}
+
+.tableHeader{
+    font-size: larger;
+}
+
 .center{
 width: fit-content;
 text-align: center;
