--- a/src/app/user/user.page.html
+++ b/src/app/user/user.page.html
@@ -40,9 +40,10 @@
   
   <ion-grid>
 
-    <ion-row color="primary" justify-content-center>
-      <ion-col>Nombre</ion-col>
+    <ion-row color="primary" justify-content-center style="border-bottom: 1px solid white; border-bottom-style: dashed;">
+      <ion-col >Nombre</ion-col >
       <ion-col>Email</ion-col>
+      <ion-col>Activo?</ion-col>
       <ion-col>Acción</ion-col>
     </ion-row>
 
@@ -54,8 +55,16 @@
       <ion-col>
         {{item.email}}
       </ion-col>
+      <ion-col>
+        {{isActive(i)}}
+      </ion-col>
       <ion-col><ion-icon name="create" (click)="updateTask(i)"></ion-icon> <ion-icon name="trash" (click)="delete(i)"></ion-icon></ion-col> 
 
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-button (click)="addUser()">Añadir usuario<ion-icon name="add"></ion-icon></ion-button>
+      </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
